app/helloworld/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  namespace: hello-world
  #annotations:
    #nginx.org/server-snippets: "server_name ~^.*$;"
spec:
  ingressClassName: "nginx"
  rules:
  - host: hello-world.example.com #because we have the annotation "nginx.org/server-snippets" with the value above, we can actually use any hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port: 
              number: 80
